# pysnapsync

./: .buildinfo  .gitignore  .landscape.yml  .prospector.yaml  .pylintrc  .travis.yml  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.testing.in  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  w32.yaml
.doctrees/: environment.pickle  index.doctree
.github/workflows/: bandit.yml
_sources/: index.txt
debian/: README.source  changelog  control  copyright  gbp.conf  rules  watch
debian/source/: patch-header
debian/upstream/: signing-key.asc
docs/: Makefile
docs/source/: conf.py  index.md
pysnapsync/: __init__.py  pysnapsync.py
pysnapsync/client/: __init__.py  client.py  config-schema.yaml  snapsync.py  snapsync.yaml  snapsync_w32.py
pysnapsync/server/: __init__.py  server.py  snapsync_rsync.py
pysnapsync/tests/: __init__.py  test_dummy.py
w32/: access.txt  example_list.txt  example_list_non_sysrestore.txt  example_sysrestore_1.txt  snapsync.yaml  test.py  wmi_create.py  wmi_delete.py  wmi_list.py
