[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pysnapsync"
version = "0.1a2"
authors = ["David Taylor <davidt@yadt.uk>"]
license = "GPLv3+"
description = "Backup from LVM to btrfs, via rsync"
keywords = ["backup", "lvm", "rsync", "btrfs"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Archiving :: Backup",
]
urls = {Homepage = "https://github.com/dtaylor84/pysnapsync"}
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "*"
pykwalify = "*"
pywin32 = { version = "*", optional = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
prospector = "*"
pytest = "*"
tox = "*"

[tool.poetry.scripts]
snapsync = "pysnapsync.client.snapsync:main"
snapsync_rsync = "pysnapsync.server.snapsync_rsync:main"
snapsync_w32 = { callable = "pysnapsync.client.snapsync_w32:main", extras = ["w32"] }

[tool.poetry.extras]
w32 = ["pywin32"]
